[gd_scene load_steps=29 format=2]

[ext_resource path="res://Sprites/OmniXV0.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Omni Logo.png" type="Texture" id=2]
[ext_resource path="res://Sprites/By Text.png" type="Texture" id=3]
[ext_resource path="res://Audio/OmniXV0 - OmniNihil Story (Loop).wav" type="AudioStream" id=4]
[ext_resource path="res://Sprites/0VOlihiN.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Powered By Godot.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Press Enter.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Omni Version 1.0.0.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Copyright OmniXV0 Text.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Main Menu.gd" type="Script" id=10]
[ext_resource path="res://Sprites/Nihil Logo.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Level Select Text.png" type="Texture" id=12]
[ext_resource path="res://Textures/Back Arrow.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Omni Text.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Coming Soon Text.png" type="Texture" id=15]
[ext_resource path="res://Textures/Back Arrow Hover.png" type="Texture" id=16]
[ext_resource path="res://Sprites/0VOlihiN With Outline.png" type="Texture" id=17]
[ext_resource path="res://Sprites/OmniXV0 Check Mark.png" type="Texture" id=18]
[ext_resource path="res://Textures/Pause Menu Invisible Button.png" type="Texture" id=19]
[ext_resource path="res://Audio/Omni SFX.wav" type="AudioStream" id=20]
[ext_resource path="res://Sprites/Music OmniXV0 - OmniNihil Story.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Music OmniXV0 - Omni.png" type="Texture" id=22]
[ext_resource path="res://Scripts/Resources/game_save.gd" type="Script" id=23]

[sub_resource type="Animation" id=1]
resource_name = "Tutorial Button Move In"
length = 0.01
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -258, -0.25, 0, 0.25, 0, 258, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.01 )
}

[sub_resource type="Animation" id=2]
resource_name = "Tutorial Button Move Out"
length = 0.01
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 258, -0.25, 0, 0.25, 0, -258, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.01 )
}

[sub_resource type="Animation" id=3]
resource_name = "Start Button Move In"
length = 0.01
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 640, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.01 )
}

[sub_resource type="Animation" id=4]
resource_name = "Start Button Move Out"
length = 0.01
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 640, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.01 )
}

[sub_resource type="Animation" id=5]
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ByText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PressEnter:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PoweredByGodot:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CopyrightOmniXV0:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("OmniVersion:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("OmniXV0:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("OmniXV0Tutorial:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MainMenu" type="Control"]
script = ExtResource( 10 )
game_save_class = ExtResource( 23 )

[node name="OmniXV0 - OmniNihil" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[node name="Omni SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
mix_target = 2
bus = "SFX"

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 480.0

[node name="PressEnter" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 320, 350 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="PoweredByGodot" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 68, 15 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="CopyrightOmniXV0" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 572, 12 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )

[node name="OmniVersion" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 320, 465 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="OmniXV0OmniNihilMusicName" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 320, 15 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 21 )

[node name="OmniLogo" type="Sprite" parent="."]
position = Vector2( 320, 175 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="NihilLogo" type="Sprite" parent="."]
visible = false
position = Vector2( 320, 175 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 11 )

[node name="ByText" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 297, 255 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="OmniXV0" type="Sprite" parent="."]
position = Vector2( 343, 250 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="VOlihiN" type="Sprite" parent="."]
visible = false
position = Vector2( 343, 250 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="StageSelectText" type="Sprite" parent="."]
visible = false
position = Vector2( 320, 30 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="OmniXV0Tutorial" type="Sprite" parent="."]
visible = false
position = Vector2( 320, 240 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="TutorialText" type="Sprite" parent="."]
visible = false
position = Vector2( 320, 420 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 14 )

[node name="ComingSoonText" type="Sprite" parent="."]
visible = false
position = Vector2( 640, 240 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 15 )

[node name="OmniXV0OmniMusicName" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 320, 465 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 22 )

[node name="TutorialCheckMark" type="Sprite" parent="."]
position = Vector2( 415, -400 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 18 )

[node name="BackButton" type="TextureButton" parent="."]
visible = false
margin_right = 100.0
margin_bottom = 60.0
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialButton" type="TextureButton" parent="."]
visible = false
margin_left = 258.0
margin_top = 178.0
margin_right = 383.0
margin_bottom = 303.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 17 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialButtonMoveIn" type="AnimationPlayer" parent="TutorialButton"]
"anims/Tutorial Button Move In" = SubResource( 1 )

[node name="TutorialButtonMoveOut" type="AnimationPlayer" parent="TutorialButton"]
"anims/Tutorial Button Move Out" = SubResource( 2 )

[node name="RightArrow" type="TextureButton" parent="."]
visible = false
margin_left = 640.0
margin_top = 270.0
margin_right = 740.0
margin_bottom = 330.0
rect_rotation = -180.0
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 16 )
expand = true

[node name="LeftArrow" type="TextureButton" parent="."]
visible = false
margin_top = 210.0
margin_right = 100.0
margin_bottom = 270.0
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 635.006
margin_top = -1.29225
margin_right = 1275.01
margin_bottom = 478.708
texture_normal = ExtResource( 19 )
expand = true

[node name="StartButtonMoveIn" type="AnimationPlayer" parent="StartButton"]
"anims/Start Button Move In" = SubResource( 3 )

[node name="StartButtonMoveOut" type="AnimationPlayer" parent="StartButton"]
"anims/Start Button Move Out" = SubResource( 4 )

[node name="FadeIn" type="AnimationPlayer" parent="."]
"anims/Fade In" = SubResource( 5 )

[node name="TutorialButtonPressed" type="Sprite" parent="."]
visible = false
position = Vector2( 320, 240 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="RightArrow" to="." method="_on_RightArrow_pressed"]
[connection signal="pressed" from="LeftArrow" to="." method="_on_LeftArrow_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="animation_finished" from="FadeIn" to="." method="_on_FadeIn_animation_finished"]
